--- a/pages/index.css
+++ b/pages/index.css
@@ -157,7 +157,7 @@
   margin: 0;
 }
 
-.recipes__list {
+.recipes__video {
   display: flex;
   justify-content: center;
   gap: 40px;
@@ -166,9 +166,13 @@
   padding-bottom: 214px;
 }
 
-.recipes__video {
-  display: block;
+.recipes__video-list {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
   margin: 0;
+  padding-top: 80px;
+  padding-bottom: 214px;
 }
 
 .recipes__iframe {
