--- a/pages/index.css
+++ b/pages/index.css
@@ -95,28 +95,20 @@
   color: #6f6f6f;
 }
 
-.header__footer-hours {
-  margin: 0;
-  font-size: 16px;
-}
-
 .header__list {
   padding: 0;
   margin: 0;
 }
 
-.header__list-item {
+.header__paragraph {
   list-style-type: none;
+  margin: 0;
 }
 
 .header__address {
   display: flex;
   flex-direction: column-reverse;
   color: #6f6f6f;
-}
-
-.header__address-title {
-  margin: 0;
 }
 
 .content {
@@ -157,7 +149,7 @@
   margin: 0;
 }
 
-.recipes__video {
+.recipes__videos {
   display: flex;
   justify-content: center;
   gap: 40px;
