--- a/pages/index.css
+++ b/pages/index.css
@@ -189,5 +189,83 @@
   margin: 0;
 }
 
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url("/images/background_reservation.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.reservation__title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  margin: 0;
+  padding-top: 100px;
+  padding-bottom: 80px;
+  text-align: center;
+}
+
+.reservation__form {
+  max-width: 385px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.reservation__fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
+.reservation__label {
+  margin-bottom: 8px;
+}
+
+.reservation__input {
+  border-width: 1px;
+  border-radius: 4px;
+  padding: 15px 20px;
+  margin-bottom: 32px;
+}
+
+.reservation__button {
+  border-width: 1px;
+  height: 60px;
+  text-align: center;
+  opacity: 1;
+  margin: 0;
+  max-width: 385px;
+  color: #ffffff;
+  background-color: #2f80ed;
+  cursor: pointer;
+}
+
+.reservation__button:hover {
+  opacity: 0.7;
+}
+
+.reservation__checkbox {
+  display: flex;
+  justify-content: center;
+  border-radius: 2px;
+  padding-top: 32px;
+  padding-bottom: 120px;
+}
+
+.reservation__checkbox-container {
+  height: 20px;
+  width: 20px;
+}
+
+.reservation__note {
+  padding-left: 12px;
+}
+
 .footer {
 }
