--- a/pages/index.css
+++ b/pages/index.css
@@ -194,6 +194,7 @@
   background-image: url("/images/background_reservation.svg");
   background-size: cover;
   background-repeat: no-repeat;
+  padding-top: 100px;
 }
 
 .reservation__title {
@@ -202,9 +203,10 @@
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  margin: 0;
-  padding-top: 100px;
-  padding-bottom: 80px;
+  margin-bottom: 80px;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 0;
   text-align: center;
 }
 
