--- a/pages/index.css
+++ b/pages/index.css
@@ -205,8 +205,8 @@
   line-height: 52px;
   margin-bottom: 80px;
   margin-top: 0;
-  margin-right: 0;
-  margin-left: 0;
+  margin-right: auto;
+  margin-left: auto;
   text-align: center;
 }
 
