--- a/pages/index.css
+++ b/pages/index.css
@@ -1,273 +1,8 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  width: 100%;
-  margin: 0 auto;
-  font-size: 16px;
-  line-height: 20px;
-  font-family: "Inter", Arial, sans-serif;
-}
-
-.header {
-  background-color: #ffffff;
-  flex-direction: column;
-  height: 100vh;
-  background-image: url("/images/background_header.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  max-height: 800px;
-  min-height: 720px;
-  padding: 30px 80px 0 30px;
-  background-size: cover;
-  position: relative;
-  display: flex;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-}
-
-.nav__logo {
-  width: 105px;
-  padding-left: 30px;
-}
-
-.nav__links {
-  display: flex;
-  align-items: center;
-  list-style-type: none;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-  padding-left: 20px;
-}
-
-.header__content {
-  display: flex;
-  align-items: center;
-}
-
-.header__title {
-  font-size: 58px;
-  line-height: 72px;
-  font-weight: 500;
-  max-width: 709px;
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 80px;
-  margin-bottom: 28px;
-  margin-top: 183px;
-}
-
-.header__description {
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 683px;
-  padding-left: 80px;
-  font-family: "Noto-serif";
-  font-weight: 400;
-}
-
-.header__image {
-  max-width: 646px;
-  width: 100%;
-  position: absolute;
-  right: 5px;
-  top: 124px;
-}
-
-.header__footer {
-  margin-top: auto;
-  display: flex;
-  justify-content: space-between;
-  padding-left: 80px;
-  padding-right: 80px;
-  padding-bottom: 40px;
-}
-
-.header__hours {
-  margin: 0;
-  color: #6f6f6f;
-}
-
-.header__list {
-  padding: 0;
-  margin: 0;
-}
-
-.header__paragraph {
-  list-style-type: none;
-  margin: 0;
-}
-
-.header__address {
-  display: flex;
-  flex-direction: column-reverse;
-  color: #6f6f6f;
-}
-
-.content {
-  width: 100%;
-  margin: 0 auto;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.recipes {
-  background-color: #0a2850;
-  background-image: url("/images/background_recipes.svg");
-  background-repeat: no-repeat;
-  color: #ffffff;
-}
-
-.recipes__title {
-  margin: 0;
-  max-width: 580px;
-  padding-top: 100px;
-  padding-left: 80px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto-serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 438px;
-  padding-left: 80px;
-  padding-top: 24px;
-  margin: 0;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin: 0;
-  padding-top: 80px;
-  padding-bottom: 214px;
-}
-
-.recipes__video-list {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin: 0;
-  padding-top: 80px;
-  padding-bottom: 214px;
-}
-
-.recipes__iframe {
-  height: 273px;
-  width: 480px;
-  border: none;
-}
-
-.recipes__caption {
-  display: flex;
-  margin: 0;
-  padding-top: 24px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  justify-content: space-between;
-}
-
-.recipes__video-text {
-  margin: 0;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url("/images/background_reservation.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding-top: 100px;
-}
-
-.reservation__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  margin-bottom: 80px;
-  margin-top: 0;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-}
-
-.reservation__form {
-  max-width: 385px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-}
-
-.reservation__fieldset {
-  border: none;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-}
-
-.reservation__label {
-  margin-bottom: 8px;
-}
-
-.reservation__input {
-  border-width: 1px;
-  border-radius: 4px;
-  padding: 15px 20px;
-  margin-bottom: 32px;
-}
-
-.reservation__button {
-  border-width: 1px;
-  height: 60px;
-  text-align: center;
-  opacity: 1;
-  margin: 0;
-  max-width: 385px;
-  color: #ffffff;
-  background-color: #2f80ed;
-  cursor: pointer;
-}
-
-.reservation__button:hover {
-  opacity: 0.7;
-}
-
-.reservation__checkbox {
-  display: flex;
-  justify-content: center;
-  border-radius: 2px;
-  padding-top: 32px;
-  padding-bottom: 120px;
-}
-
-.reservation__checkbox-container {
-  height: 20px;
-  width: 20px;
-}
-
-.reservation__note {
-  padding-left: 12px;
-}
-
-.footer {
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/content.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/footer.css");
