--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,7 @@
 @import url("../blocks/recipes.css");
 @import url("../blocks/reservation.css");
 @import url("../blocks/footer.css");
+
+* {
+  scroll-behavior: smooth;
+}
